--- a/MUSICA Y VINILOS/musicayvinilos.css
+++ b/MUSICA Y VINILOS/musicayvinilos.css
@@ -1,14 +1,19 @@
 :root {
-    --blanco: #FFF;
-    --negro: #000;
+    --blanco: #FAFAFF;
+    --negro: #040303;
+    --gris: #6A7B76 ;
+    --verde: #3A4E48;
+    --plata: #E2E2E2;
 }
 
 body {
     background-color: var(--blanco);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .fixed {
-    background-color: var(--blanco);
+    background-color: var(--verde);
+    color: var(--blanco);
     padding: 15px;
     text-align: center;
     position: fixed;
